fix: overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 /* Google Fonts import */
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700");
+html { overflow-x: hidden;}
 body {
   font-family: "Montserrat", sans-serif;
   background: linear-gradient(180deg, #F1F5F8 200px, #fff 201px);}
